# Skadi

./: .gitignore  CMakeLists.txt  README.md
paper/example1/: main.tex  refs.bib
paper/example1/modules/: intro.tex  rw.tex
paper/example2/CGNA paper/: 00_CGA15.tex  01_abstract.tex  02_introduction.tex  03_relatedwork.tex  04_setup.tex  05_stimuli.tex  06_procedure.tex  07_result.tex  08_conclusion.tex  09_note.tex  references.bib
src/: Brush.hpp  CMakeLists.txt  Camera.hpp  Concurrent.hpp  Float3.hpp  GECom.hpp  GL.hpp  Graph.hpp  GraphEditor.hpp  Heightmap.hpp  Image.hpp  Layout.cpp  Log.hpp  Perlin.cpp  Perlin.hpp  RidgeConverter.hpp  SimpleShader.hpp  Window.cpp  Window.hpp  main.cpp
